unpackaged/main/default/objects/Chiffres_d_affaires__c/Chiffres_d_affaires__c.object-meta.xml
<CustomObject>
    <label>Chiffre d&#39;affaires</label>
    <nameField>
        <displayFormat>CA-{0}</displayFormat>
        <label>N° CA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chiffres d&#39;affaires</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>