unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Apercu_de_la_hierarchie__c.field-meta.xml
<CustomField>
    <fullName>Apercu_de_la_hierarchie__c</fullName>
    <formula>Compte_client_SGL__r.Tech_Niv_hierarchiques_supplementaires__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aperçu de la hiérarchie</label>
    <type>Text</type>
</CustomField>