unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/CA_Hierarchie_concatene__c.field-meta.xml
<CustomField>
    <fullName>CA_Hierarchie_concatene__c</fullName>
    <formula>Compte_client_SGL__r.Tech_Compte_Hierarchie_concatenee_TXT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA-Hiérarchie concaténée</label>
    <type>Text</type>
</CustomField>