unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/CA_Tech_5_niveaux_superieurs__c.field-meta.xml
<CustomField>
    <fullName>CA_Tech_5_niveaux_superieurs__c</fullName>
    <formula>Compte_client_SGL__r.Tech_ID_compte_et_5_niveaux_superieurs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA-Tech 5 niveaux supérieurs</label>
    <type>Text</type>
</CustomField>