unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/CA_Tech_Niv_hierarchiques_supplementair__c.field-meta.xml
<CustomField>
    <fullName>CA_Tech_Niv_hierarchiques_supplementair__c</fullName>
    <formula>Compte_client_SGL__r.Tech_ID_s_Niv_hierarchie_supplement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA-Tech Niv. hiérarchiques supplémentair</label>
    <type>Text</type>
</CustomField>