unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Code_contact_SGL__c.field-meta.xml
<CustomField>
    <fullName>Code_contact_SGL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code contact SGL</label>
    <referenceTo>Code_contact_SGL__c</referenceTo>
    <relationshipLabel>Chiffres d&#39;affaires</relationshipLabel>
    <relationshipName>CodecontactSGL</relationshipName>
    <type>Lookup</type>
</CustomField>