unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Code_Structure__c.field-meta.xml
<CustomField>
    <fullName>Code_Structure__c</fullName>
    <label>Code Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>