unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Code_type_tiers__c.field-meta.xml
<CustomField>
    <fullName>Code_type_tiers__c</fullName>
    <inlineHelpText>C : Correspondant, M : Médecins, I : Infirmière.</inlineHelpText>
    <label>Code type tiers</label>
    <length>1</length>
    <type>Text</type>
</CustomField>