unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Compte_client_SGL__c.field-meta.xml
<CustomField>
    <fullName>Compte_client_SGL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte correspondant SGL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chiffres d&#39;affaires</relationshipLabel>
    <relationshipName>CompteclientSGL_CA</relationshipName>
    <type>Lookup</type>
</CustomField>