unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Laboratoire_d_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Laboratoire_d_enregistrement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laboratoire d&#39;enregistrement</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chiffres d&#39;affaires (Laboratoire d&#39;enregistrement)</relationshipLabel>
    <relationshipName>Chiffres_d_affaires</relationshipName>
    <type>Lookup</type>
</CustomField>