unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Nb_Dossiers_gratuits__c.field-meta.xml
<CustomField>
    <fullName>Nb_Dossiers_gratuits__c</fullName>
    <label>Nombre de dossiers gratuits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>