unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Premier_jour_du_mois__c.field-meta.xml
<CustomField>
    <fullName>Premier_jour_du_mois__c</fullName>
    <label>1er jour du mois</label>
    <type>Date</type>
</CustomField>