unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/Remise_1__c.field-meta.xml
<CustomField>
    <fullName>Remise_1__c</fullName>
    <label>Remise 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>