unpackaged/main/default/objects/Chiffres_d_affaires__c/fields/TECH_CA_Medecin__c.field-meta.xml
<CustomField>
    <fullName>TECH_CA_Medecin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH CA Médecin</label>
    <type>Checkbox</type>
</CustomField>