unpackaged/main/default/objects/Chiffres_d_affaires__c/listViews/CA_Comptes_Client_SGL.listView-meta.xml
<ListView>
    <fullName>CA_Comptes_Client_SGL</fullName>
    <columns>NAME</columns>
    <columns>Mois__c</columns>
    <columns>CA_Facturable__c</columns>
    <columns>Compte_client_SGL__c</columns>
    <columns>Laboratoire_d_enregistrement__c</columns>
    <columns>Code_Structure__c</columns>
    <columns>Nom_de_structure__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Compte_client_SGL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CA préleveurs / prescripteurs</label>
</ListView>